# Journey-Yourself

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  LICENSE  README.md  README_zh-CN.md  ROADMAP.md  docker-compose.yml  limitations_and_future.md  structure.md
backend/: migrate_db.py  pyproject.toml  test_db.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  security.py
backend/app/api/: __init__.py
backend/app/api/app/: cursor.py  entry_detail_router.py  home_router.py  notebook_detail_router.py  notebook_entries_router.py  public_share_entries_router.py  public_share_summary_router.py  router.py  schemas.py  search_bookmarks_router.py  search_entries_router.py  stats_router.py  timeline_router.py
backend/app/api/v1/: router.py  users_router.py
backend/app/modules/: __init__.py
backend/app/modules/automation/: __init__.py  router.py
backend/app/modules/discovery/: router.py  (+1 more)
backend/app/routers/: __init__.py  amap.py  auth.py  diaries.py  karakeep.py  media_crawler.py  notebooks.py  proxy.py  search.py  share.py  stats.py  tags.py  tasks.py  timeline.py  users.py
backend/app/services/: crawler_service.py
backend/data/: journey.db
backend/tests/: test_app_query_router.py  test_cover_image_helper.py  test_e2e_api_smoke.py  test_identity_auth_router_compat.py  test_journaling_helpers.py  test_journaling_tags_router_compat.py  test_module_router_compat.py  test_notebook_helpers.py  test_users_domain_split.py  test_v1_router_registry.py
backend/tests/scripts/: api_smoke_runner.py
(+154 files in other folders)
